[gd_scene format=3 uid="uid://bo8pyxkcykbab"]

[ext_resource type="Theme" uid="uid://duj7cgl0u7wd3" path="res://ressources/theme.tres" id="1_mtuya"]
[ext_resource type="Script" uid="uid://b3glj8ydh7f4f" path="res://scenes/game_interface.gd" id="2_7buk7"]

[node name="GameInterface" type="CanvasLayer" unique_id=1587630800]
process_mode = 3
script = ExtResource("2_7buk7")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1630382994]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mtuya")
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1156050452]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1248094152]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_constants/separation = 17

[node name="PlayerName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=1060822646]
layout_mode = 2
size_flags_horizontal = 0
text = "PLAYER"

[node name="PlayerLife" type="ProgressBar" parent="MarginContainer/VBoxContainer/HBoxContainer" unique_id=340610829]
clip_contents = true
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
step = 0.1
value = 100.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer" unique_id=1933903662]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
alignment = 1

[node name="BossName" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer" unique_id=275543526]
layout_mode = 2
text = "Boss name"
horizontal_alignment = 1

[node name="BossLife" type="ProgressBar" parent="MarginContainer/VBoxContainer/VBoxContainer" unique_id=1144984005]
custom_minimum_size = Vector2(700, 40)
layout_mode = 2
step = 0.1
value = 70.0

[node name="GameOver" type="ColorRect" parent="." unique_id=1863885616]
unique_name_in_owner = true
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mtuya")
color = Color(0, 0, 0, 0.6313726)

[node name="MarginContainer" type="MarginContainer" parent="GameOver" unique_id=1404996130]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/MarginContainer" unique_id=1378016458]
layout_mode = 2
theme_override_constants/separation = 130
alignment = 1

[node name="Label" type="Label" parent="GameOver/MarginContainer/VBoxContainer" unique_id=815151058]
layout_mode = 2
theme_type_variation = &"Title"
text = "Game over !"
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="GameOver/MarginContainer/VBoxContainer" unique_id=1451284038]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Menu"

[node name="GameWon" type="ColorRect" parent="." unique_id=2039490906]
unique_name_in_owner = true
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mtuya")
color = Color(1, 1, 1, 0.6313726)

[node name="MarginContainer" type="MarginContainer" parent="GameWon" unique_id=327640521]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameWon/MarginContainer" unique_id=632715889]
layout_mode = 2
theme_override_constants/separation = 130
alignment = 1

[node name="Label" type="Label" parent="GameWon/MarginContainer/VBoxContainer" unique_id=1832827036]
layout_mode = 2
theme_type_variation = &"Title"
text = "Game Won !"
horizontal_alignment = 1

[node name="MenuButton" type="Button" parent="GameWon/MarginContainer/VBoxContainer" unique_id=674199456]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Menu"

[node name="GamePaused" type="ColorRect" parent="." unique_id=1597185200]
unique_name_in_owner = true
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mtuya")
color = Color(0, 0, 0, 0.6313726)

[node name="MarginContainer" type="MarginContainer" parent="GamePaused" unique_id=296850765]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GamePaused/MarginContainer" unique_id=209145540]
layout_mode = 2
theme_override_constants/separation = 130
alignment = 1

[node name="Label" type="Label" parent="GamePaused/MarginContainer/VBoxContainer" unique_id=936279291]
layout_mode = 2
theme_type_variation = &"Title"
text = "Game paused"
horizontal_alignment = 1

[node name="Continue" type="Button" parent="GamePaused/MarginContainer/VBoxContainer" unique_id=556897224]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Continue
"

[node name="MenuButton" type="Button" parent="GamePaused/MarginContainer/VBoxContainer" unique_id=55519676]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Menu"

[connection signal="pressed" from="GameOver/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="GameWon/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="GamePaused/MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="GamePaused/MarginContainer/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
